# openscope_databook

./: .buildinfo  .codespellrc  .gitignore  Dockerfile  FAQ.html  LICENSE.txt  README.md  authors_index.html  background.json  barcoding.json  behavioral-state.json  bibliography.html  cebra-time.json  cell-matching.json  classify-waveforms.json  config.json  contribution.html  contribution.json  cred-assign-figures.json  current-source-density.json  dendritic-coupling.json  download-nwb.json  environment.yml  environments.json  faq.json  genindex.html  get-dandiset-metadata.json  github.json  glm-pynapple-nemos.json  glm.json  glo.json  helloworld1.ipynb  illusion.json  index.html  index.json  intro.html  jupyter-book.json  jupyter_notebook_config.py  loop.json  modality-alignment.json  (+39 more)
.binder/: postBuild  requirements.txt
.jupyter/: jupyter_notebook_config.py
_sources/: FAQ.md  contribution.md  intro.md
background/: index.html
barcoding/: index.html
basics/: background.html  download_nwb.html  get_dandiset_metadata.html  intro_information.html  read_nwb.html  stream_nwb.html  test_thebe.html  use_nwbwidgets.html
behavioral-state/: index.html
cebra-time/: index.html
cell-matching/: index.html
classify-waveforms/: index.html
code/: _toc.yml  authors_index.md  bibliography.md  references.bib  run
contribution/: index.html
cred-assign-figures/: index.html
current-source-density/: index.html
data/: barcoding_sessions.csv  contributors.csv  dc_sessions.csv  ecephys_schema.csv  glo_sessions.csv  illusion_sessions.csv  loop_sessions.csv  ophys_schema.csv  psycode_sessions.csv  seqlearn_sessions.csv  suite2p_classifier.npy  texture_sessions.csv  vippo_sessions.csv  vismo_sessions.csv
databook_utils/: cred_assign_utils.py  dandi_utils.py  insert_authors_version.py  list_authors.py  pyvenv.cfg
dendritic-coupling/: index.html
docs/: FAQ.md  _config.yml  _toc.yml  authors.yml  authorship-plugin-shim.mjs  authorship-plugin.mjs  authorship-widget.css  colab-badge-plugin.mjs  contribution.md  custom.css  figure-lightbox-plugin.mjs  intro.md  intro_template.md  myst.yml  package-lock.json  package.json  references.bib  requirements.txt  sync_authors.py  test_notebook.ipynb  version-plugin.mjs
download-nwb/: index.html
embargoed/: cell_matching.html  modality_alignment.html  test_2p_responses_embargoed.html  visualize_behavior.html
environment/: Dockerfile  LICENSE.txt  environment.yml  postInstall  requirements.txt
environments/: index.html
experiments/: dendritic_coupling.html  glo.html  illusion.html
faq/: index.html
first-order/: cell_matching.html  classify_waveforms.html  current_source_density.html  optotagging.html  receptive_fields.html  suite2p.html  test_2p_responses.html  test_spike_responses.html  test_unit_responses.html  test_unit_spikes.html
get-dandiset-metadata/: index.html
github/: index.html
glm/: index.html
glm-pynapple-nemos/: index.html
glo/: index.html
higher-order/: GLM_pynapple_nemos.html  behavioral_state.html  cebra_time.html  glm.html  tca.html
illusion/: index.html
jupyter-book/: index.html
loop/: index.html
metadata/: metadata.yaml
methods/: environments.html  github.html  jupyter_book.html
modality-alignment/: index.html
optotagging/: index.html
predictive-processing-ephys/: index.html
predictive-processing-ophys/: index.html
projects/: barcoding.html  cred_assign_figures.html  dendritic_coupling.html  glo.html  illusion.html  loop.html  psycode.html  sequence_learning.html  texture_get_dandiset_metadata.html  vippo.html
psycode/: index.html
read-nwb/: index.html
receptive-fields/: index.html
replication/: cred_assign_figures.html
sequence-learning/: index.html
stream-nwb/: index.html
suite2p/: index.html
tca/: index.html
test-2p-responses/: index.html
test-unit-responses/: index.html
texture/: index.html
utils/: dandi_utils.py  jupyter_notebook_config.py  list_authors.py
view_nwb/: view_nwb.ipynb
vippo/: index.html
vismo/: index.html
visualization/: visualize_2p_VR_behavior.html  visualize_2p_raw.html  visualize_2p_responses.html  visualize_behavior.html  visualize_eye_tracking.html  visualize_lfp_responses.html  visualize_neuropixel_probes.html  visualize_neuropixels_probes.html  visualize_templates.html  visualize_unit_metrics.html  visualize_unit_responses.html  visualize_unit_spikes.html
visualize-2p-raw/: index.html
visualize-2p-responses/: index.html
visualize-2p-vr-behavior/: index.html
visualize-behavior/: index.html
(+151 files in other folders)
