[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openscope-databook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Carter Peene", email = "carter.peene@alleninstitute.org" }
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "autograd==1.7",
    "ccfwidget==0.5.3",
    "cebra>=0.6.0",
    "dandi==0.76.4",
    "elephant==1.2.1",
    "h5py>=3.8",
    "hdmf>=4.1,<5",
    "hdmf-zarr>=0.12,<0.14",
    "hdf5storage",
    "ipympl",
    "ipywidgets",
    "itkwidgets",
    "jaxopt>=0.8.5",
    "jupyter==1.0.0",
    "markupsafe==3.0.3",
    "matplotlib",
    "matplotlib-inline<0.2",
    "mpl-interactions",
    "nbmake==1.5.5",
    "nemos>=0.2.3",
    "neo==0.14.4",
    "numcodecs==0.15.1",
    "numpy==2.4.6",
    "ophys-nway-matching @ git+https://github.com/AllenInstitute/ophys_nway_matching.git@main",
    "pandas>=2.2,<3",
    "pillow==11",
    "pooch>=1.8.2",
    "pynapple>=0.9.2",
    "pynwb>3",
    "pytest==8.3.5",
    "pytest-xdist==3.5.0",
    "quantities==0.16.4",
    "remfile==0.1.10",
    "sbxreader>=0.2.3",
    "scikit-image==0.26.0",
    "scikit-learn>=1.7.0",
    "scipy==1.17.1",
    "seaborn>=0.13.2",
    "ssm @ git+https://github.com/rcpeene/ssm",
    "statsmodels==0.14.6",
    "suite2p==0.14",
    "tensortools==0.4",
    "torch==2.12.1",
    "tqdm==4.68.3",
    "traitlets==5.6.0",
    "umap-learn>=0.5.11",
    "zarr==2.18.3",
]

[project.optional-dependencies]
dev = [
    "markupsafe==3.0.3",
    "mystmd",
    "nbmake==1.5.5",
    "pytest==8.3.5",
    "pytest-xdist==3.5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["databook_utils*"]

[tool.uv]
override-dependencies = ["pynwb>3", "numpy==2.4.6"]

[tool.uv.extra-build-dependencies]
ssm = ["numpy", "Cython"]


[tool.uv.sources]
cebra = { git = "https://github.com/AdaptiveMotorControlLab/CEBRA", rev = "d1842cc" }
ophys-nway-matching = { git = "https://github.com/AllenInstitute/ophys_nway_matching.git" }
ndx-harvey-swac = { git = "https://github.com/sytseng/ndx-harvey-swac" }
databook-utils = { git = "https://github.com/AllenInstitute/openscope_databook" }

